--- a/notebooks/civil.ipynb
+++ b/notebooks/civil.ipynb
@@ -484,8 +484,8 @@
     "def get_wxe(*_):\n",
     "    def confidence_wxe_fn(logits, y, weights):\n",
     "        ce = torch.nn.functional.cross_entropy(logits, y, reduction='none')\n",
-    "        focal = weights * ce\n",
-    "        return focal.sum(), weights\n",
+    "        loss = weights * ce\n",
+    "        return loss.sum(), weights\n",
     "\n",
     "    return confidence_wxe_fn\n",
     "\n",
