remove early stopping with small validation

--- a/notebooks/wb_celeba.ipynb
+++ b/notebooks/wb_celeba.ipynb
@@ -819,7 +819,7 @@
     "# We provide an example for Waterbirds\n",
     "for seed in [0, 21, 42]:\n",
     "    for num_augs in [1]:\n",
-    "        for val_prop in [0.005, 0.01, 0.02, 0.05, 0.1, 0.2, 0.5, 1]:\n",
+    "        for val_prop in [0.005, 0.01, 0.02, 0.05, 0.1, 0.2, 0.5]:\n",
     "            args = SimpleNamespace(\n",
     "                    data_transform='NoAugWaterbirdsCelebATransform',\n",
     "                    dataset='SpuriousDataset',\n",
@@ -847,7 +847,7 @@
     "                \"gamma_choices\": np.linspace(4, 20, 33),\n",
     "                \"reg_coeff_choices\": [0, 0.1, 0.2, 0.3],\n",
     "                \"balance_classes_choices\": [True],\n",
-    "                \"early_stop\": 'wga',\n",
+    "                \"early_stop\": 'none', # as explained in the paper, we do not use early stopping for the sweep\n",
     "                \"random\": False,\n",
     "                \"val_prop\": val_prop,\n",
     "                'sweep_name': f'val_prop_{val_prop}_seed{seed}'\n",
